fix: The image on the mobile phone out of the screen

--- a/client/modules/Chat/MessageList.less
+++ b/client/modules/Chat/MessageList.less
@@ -4,4 +4,8 @@
     overflow-y: auto;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
+
+    @media (orientation : portrait) {
+        padding: 8px 6px 0 6px;
+    }
 }
